--- a/package.json
+++ b/package.json
@@ -59,7 +59,10 @@
     "vaul": "^0.9.6",
     "zod": "^3.24.1",
     "@emotion/is-prop-valid": "latest",
-    "framer-motion": "latest"
+    "@tsparticles/engine": "latest",
+    "framer-motion": "latest",
+    "@tsparticles/react": "latest",
+    "@tsparticles/slim": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
