--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "@tsparticles/engine": "latest",
     "framer-motion": "latest",
     "@tsparticles/react": "latest",
-    "@tsparticles/slim": "latest"
+    "@tsparticles/slim": "latest",
+    "react-intersection-observer": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
