--- a/package.json
+++ b/package.json
@@ -60,10 +60,13 @@
     "zod": "^3.24.1",
     "@emotion/is-prop-valid": "latest",
     "@tsparticles/engine": "latest",
+    "@fortawesome/fontawesome-svg-core": "latest",
     "framer-motion": "latest",
     "@tsparticles/react": "latest",
     "@tsparticles/slim": "latest",
-    "react-intersection-observer": "latest"
+    "react-intersection-observer": "latest",
+    "@fortawesome/react-fontawesome": "latest",
+    "@fortawesome/free-solid-svg-icons": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
