--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "@tsparticles/slim": "latest",
     "react-intersection-observer": "latest",
     "@fortawesome/react-fontawesome": "latest",
-    "@fortawesome/free-solid-svg-icons": "latest"
+    "@fortawesome/free-solid-svg-icons": "latest",
+    "react-icons": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
