--- a/package.json
+++ b/package.json
@@ -63,8 +63,8 @@
     "framer-motion": "latest",
     "@tsparticles/react": "latest",
     "@tsparticles/slim": "latest",
-    "aos": "latest",
-    "react-intersection-observer": "latest"
+    "react-intersection-observer": "latest",
+    "aos": "latest"
   },
   "devDependencies": {
     "@types/node": "^22",
